DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/DeltaForge__GovernorPolicy__mdt.object-meta.xml
<CustomObject>
    <description>Governor-aware orchestration thresholds and feature flags.</description>
    <label>Governor Policy</label>
    <pluralLabel>Governor Policies</pluralLabel>
</CustomObject>