DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/CalloutThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>CalloutThresholdPct__c</fullName>
    <description>Callout threshold percentage used to enter high-pressure mode.</description>
    <label>Callout Threshold Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>