DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/CpuThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>CpuThresholdPct__c</fullName>
    <description>CPU threshold percentage used to enter high-pressure mode.</description>
    <label>CPU Threshold Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>