DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/DmlThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>DmlThresholdPct__c</fullName>
    <description>DML rows threshold percentage used to enter high-pressure mode.</description>
    <label>DML Threshold Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>