DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/HeapThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>HeapThresholdPct__c</fullName>
    <description>Heap threshold percentage used to enter high-pressure mode.</description>
    <label>Heap Threshold Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>