DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/ObserveOnly__c.field-meta.xml
<CustomField>
    <fullName>ObserveOnly__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, governor pressure only logs telemetry and never spills work.</description>
    <label>Observe Only</label>
    <type>Checkbox</type>
</CustomField>