DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/QuantumMaxRows__c.field-meta.xml
<CustomField>
    <fullName>QuantumMaxRows__c</fullName>
    <description>Hard cap for row count per quantum.</description>
    <label>Quantum Max Rows</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>