DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/QuantumMaxRules__c.field-meta.xml
<CustomField>
    <fullName>QuantumMaxRules__c</fullName>
    <description>Hard cap for rule count per quantum.</description>
    <label>Quantum Max Rules</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>