DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/RollupWindowDefault__c.field-meta.xml
<CustomField>
    <fullName>RollupWindowDefault__c</fullName>
    <description>Starting window size for rollup processing.</description>
    <label>Rollup Window Default</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>