DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/SoqlThresholdPct__c.field-meta.xml
<CustomField>
    <fullName>SoqlThresholdPct__c</fullName>
    <description>SOQL threshold percentage used to enter high-pressure mode.</description>
    <label>SOQL Threshold Percent</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>