DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/SpilloverChannel__c.field-meta.xml
<CustomField>
    <fullName>SpilloverChannel__c</fullName>
    <description>Preferred channel for deferred execution.</description>
    <label>Spillover Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queueable</fullName>
                <default>true</default>
                <label>Queueable</label>
            </value>
            <value>
                <fullName>PlatformEvent</fullName>
                <label>Platform Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>