DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/SpilloverEnabled__c.field-meta.xml
<CustomField>
    <fullName>SpilloverEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Feature flag for enabling spillover decisions outside observe-only mode.</description>
    <label>Spillover Enabled</label>
    <type>Checkbox</type>
</CustomField>