DeltaForgeV2/force-app/main/default/objects/DeltaForge__GovernorPolicy__mdt/fields/SpilloverPriority__c.field-meta.xml
<CustomField>
    <fullName>SpilloverPriority__c</fullName>
    <description>Priority level assigned to deferred work.</description>
    <label>Spillover Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>